# graftcode-plugins

./: .gitignore
.github/: MULTIPLATFORM_BUILD.md
.github/workflows/: rabbitmq-build.yml  servicebus-build.yml
nats/: CMakeLists.txt  Dockerfile  Readme.md
nats/GraftcodePluginsInterfaces/: IServer.h  ITransport.h  _common.h
nats/NatsPlugin/: CMakeLists.txt  NatsClient.cpp  NatsClient.h  NatsServer.cpp  NatsServer.h  TransportNats.cpp  TransportNats.h
nats/NatsPluginTest/: CMakeLists.txt  NatsConfigTests.cpp  NatsPluginTests.cpp
rabbitmq/: CMakeLists.txt  CMakeSettings.json  Dockerfile  Readme.md
rabbitmq/HypertubeNativeInterfaces/: ILauncher.h  INativeRoute.h  IReceiver.h  ITransmitter.h  ITransport.h  _common.h
rabbitmq/RabbitmqPlugin/: CMakeLists.txt  IServer.h  RabbitMqClient.cpp  RabbitMqClient.h  RabbitMqServer.cpp  RabbitMqServer.h  TransportRabbitMq.cpp  TransportRabbitMq.h
rabbitmq/RabbitmqPluginTest/: CMakeLists.txt  RabbitMqTransportTests.cpp
servicebus/: CMakeLists.txt  CMakeSettings.json  Readme.md  vcpkg.json
servicebus/GraftcodePluginsInterfaces/: _common.h
servicebus/ServiceBusPlugin/: CMakeLists.txt  ServiceBusClient.cpp  ServiceBusClient.h  ServiceBusServer.cpp  ServiceBusServer.h  TransportServiceBus.cpp  TransportServiceBus.h
servicebus/ServiceBusPluginTest/: CMakeLists.txt  ServiceBusTransportTests.cpp
